<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/home_lesson_city_sp"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:spinnerMode="dropdown"
        android:background="@drawable/spinner_bg"
        android:popupBackground="@color/background"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/home_lesson_session_cg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleLine="true"
        app:singleSelection="true"
        app:chipSpacingHorizontal="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_lesson_city_sp">

        <com.google.android.material.chip.Chip
            android:id="@+id/home_lesson_total_cp"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/total"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="13sp"
            android:checked="true"
            app:chipBackgroundColor="@color/session_chip_color" />

        <com.google.android.material.chip.Chip
            android:id="@+id/home_lesson_vocal_cp"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/vocal"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="13sp"
            app:chipBackgroundColor="@color/session_chip_color" />

        <com.google.android.material.chip.Chip
            android:id="@+id/home_lesson_guitar_cp"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/guitar"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="13sp"
            app:chipBackgroundColor="@color/session_chip_color" />

        <com.google.android.material.chip.Chip
            android:id="@+id/home_lesson_base_cp"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/base"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="13sp"
            app:chipBackgroundColor="@color/session_chip_color" />

        <com.google.android.material.chip.Chip
            android:id="@+id/home_lesson_drum_cp"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/drum"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="13sp"
            app:chipBackgroundColor="@color/session_chip_color" />

        <com.google.android.material.chip.Chip
            android:id="@+id/home_lesson_keyboard_cp"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/keyboard"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="13sp"
            app:chipBackgroundColor="@color/session_chip_color" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_lesson_list_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="10dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_lesson_session_cg"
        tools:listitem="@layout/item_band_list" />

</androidx.constraintlayout.widget.ConstraintLayout>