<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/signup_gender_back_iv"
        android:layout_width="13dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_back"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/signup_gender_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_gender_back_iv">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:src="@drawable/ic_signup_progress"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="25dp"
            android:layout_height="5dp"
            android:src="@drawable/ic_signup_progress_selected"
            android:layout_marginStart="7dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:src="@drawable/ic_signup_progress"
            android:layout_marginStart="7dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:src="@drawable/ic_signup_progress"
            android:layout_marginStart="7dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:src="@drawable/ic_signup_progress"
            android:layout_marginStart="7dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:src="@drawable/ic_signup_progress"
            android:layout_marginStart="7dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/signup_gender_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_gender_title"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:fontFamily="@font/pretendard_regular"
        android:lineSpacingExtra="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/signup_gender_progress"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/signup_gender_gender_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/signup_gender_title_tv"
        app:layout_constraintStart_toStartOf="parent"/>
    
    <CheckBox
        android:id="@+id/signup_gender_man_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:text="@string/man"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:fontFamily="@font/pretendard_bold"
        android:drawableStart="@drawable/white_checkbox"
        android:drawablePadding="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/signup_gender_gender_tv"
        app:layout_constraintStart_toStartOf="parent"/>

    <CheckBox
        android:id="@+id/signup_gender_woman_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:text="@string/woman"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:fontFamily="@font/pretendard_bold"
        android:drawableStart="@drawable/white_checkbox"
        android:drawablePadding="10dp"
        android:layout_marginStart="55dp"
        app:layout_constraintTop_toBottomOf="@id/signup_gender_gender_tv"
        app:layout_constraintStart_toEndOf="@id/signup_gender_man_cb"/>

    <TextView
        android:id="@+id/signup_gender_birthday_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/signup_gender_man_cb"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/signup_gender_next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="17sp"
        android:fontFamily="@font/pretendard_regular"
        android:background="@drawable/blue_round_bg"
        android:paddingVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>