<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="20dp">

   <androidx.appcompat.widget.AppCompatImageView
       android:id="@+id/session_volunteer_profile_iv"
       android:layout_width="55dp"
       android:layout_height="55dp"
       android:src="@drawable/ic_basic_profile"
       android:layout_marginStart="20dp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/session_volunteer_session_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drum"
        android:textColor="@color/blue"
        android:textSize="11sp"
        app:chipMinTouchTargetSize="0dp"
        android:paddingVertical="3dp"
        android:backgroundTint="@color/background"
        app:chipStrokeColor="@color/blue"
        app:chipStrokeWidth="1dp"
        android:clickable="false"
        app:rippleColor="@color/transparent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/session_volunteer_profile_iv"/>
    
    <TextView
        android:id="@+id/session_volunteer_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:fontFamily="@font/pretendard_medium"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/session_volunteer_session_tv"
        app:layout_constraintStart_toEndOf="@id/session_volunteer_session_tv"
        app:layout_constraintBottom_toBottomOf="@id/session_volunteer_session_tv"/>

    <TextView
        android:id="@+id/session_volunteer_intro_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduce"
        android:textColor="@color/gray"
        android:textSize="13sp"
        android:fontFamily="@font/pretendard_regular"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/session_volunteer_session_tv"
        app:layout_constraintStart_toStartOf="@id/session_volunteer_session_tv"/>

    <TextView
        android:id="@+id/session_volunteer_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduce"
        android:textColor="@color/gray"
        android:textSize="13sp"
        android:fontFamily="@font/pretendard_regular"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/session_volunteer_intro_tv"
        app:layout_constraintStart_toStartOf="@id/session_volunteer_intro_tv"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/session_volunteer_decision_tv"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/recruit_decide"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textAlignment="center"
        android:fontFamily="@font/pretendard_medium"
        app:chipBackgroundColor="@color/blue"
        android:clickable="false"
        app:rippleColor="@color/transparent"
        android:paddingVertical="5dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@id/session_volunteer_profile_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/session_volunteer_profile_iv" />

</androidx.constraintlayout.widget.ConstraintLayout>
